<resources>
    <string name="google_map_key" translatable="false">AIzaSyBShoCJ3_5C_x--8dxnaLQbQCX5hUwOq3E</string>

    <string name="app_name">Ok Movie</string>
    <string name="title_feed">главная</string>
    <string name="title_like">избранное</string>
    <string name="title_settings">настройки</string>
    <string name="feed_trend">В тренде</string>
    <string name="new_products">Новинки</string>
    <string name="genres">Жанры</string>
    <string name="serials">Сериалы</string>
    <string name="error">Ошибка</string>
    <string name="reload">Загрузить</string>
    <string name="threads">Потоки</string>
    <string name="calculate">Расчет</string>


    <string name="in_main_thread">В главном потоке</string>
    <string name="from_thread">Из потока %d</string>
    <string name="in_thread">Выводим в потоке %s</string>
    <string name="calculate_in_thread">Считаем в потоке %s</string>
    <string name="my_handler_thread">My_Handler_Thread</string>
    <string name="hello_from_thread_fragment">Hello from ThreadsFragment</string>
    <string name="default_number">1</string>
    <string name="calc_in_thread">Расчёт в потоке</string>
    <string name="handler_thread">Handler_Thread</string>
    <string name="service">Service</string>
    <string name="service_broadcast">Service + Broadcast</string>
    <string name="rating_imdb">рейтинг IMDB</string>
    <string name="rating_kp">рейтинг КП</string>
    <string name="actors">Актеры</string>
    <string name="adult_content">Мультфильмы на главной странице</string>
    <string name="cartoons">Мультфильмы</string>
    <string name="note">Заметка</string>
    <string name="add">add</string>
    <string name="contacts">Контакты</string>
    <string name="need_permissions_to_read_contacts">Необходимо предоставить разрешение на чтения контактов</string>
    <string name="maps">Карты</string>
    <string name="map">Карта</string>
    <string name="map_mode">Режим карты</string>
    <string name="normal">Нормальный</string>
    <string name="satellite">Спутники</string>
    <string name="terrain">Схема</string>
    <string name="traffic">Трафик</string>
    <string name="enter_query">Введите запрос</string>
    <string name="search">Поиск</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="start_marker">Старт</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
</resources>