<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_map_mode"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:orderInCategory="1"
        android:title="@string/map_mode"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource">

        <menu>
            <item
                android:id="@+id/menu_map_mode_normal"
                android:orderInCategory="1"
                android:title="@string/normal"
                tools:ignore="AppCompatResource" />

            <item
                android:id="@+id/menu_map_mode_satellite"
                android:orderInCategory="2"
                android:title="@string/satellite"
                tools:ignore="AppCompatResource" />

            <item
                android:id="@+id/menu_map_mode_terrain"
                android:orderInCategory="3"
                android:title="@string/terrain"
                tools:ignore="AppCompatResource" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_map_traffic"
        android:icon="@android:drawable/ic_menu_directions"
        android:orderInCategory="2"
        android:title="@string/traffic"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

</menu>